# pynamicgain

./: .buildinfo  .coverage  .gitignore  CHANGELOG.md  README.md  api_documentation.html  genindex.html  index.html  objects.inv  py-modindex.html  pyproject.toml  search.html  searchindex.js
.doctrees/: api_documentation.doctree  environment.pickle  index.doctree
.doctrees/_apidoc/: modules.doctree  pynamicgain.doctree
.doctrees/_autosummary/: pynamicgain.analysis.doctree  pynamicgain.doctree  pynamicgain.new_setup.doctree  pynamicgain.stimulus_generation.doctree
.doctrees/explanations/: SMPR.doctree  deep_settings.doctree  development.doctree  first_steps.doctree  motivations.doctree  usage.doctree
.github/workflows/: deploy_docs.yml  docs_check.yml  tests.yml
PynamicGain.egg-info/: PKG-INFO  SOURCES.txt
_apidoc/: modules.html  pynamicgain.html
_autosummary/: pynamicgain.analysis.html  pynamicgain.html  pynamicgain.new_setup.html  pynamicgain.stimulus_generation.html
_sources/: index.rst.txt
_sources/_apidoc/: pynamicgain.rst.txt
_sources/explanations/: SMPR.md.txt
docs/source/: conf.py  index.rst
docs/source/_autosummary/: pynamicgain.analysis.rst  pynamicgain.new_setup.rst  pynamicgain.rst  pynamicgain.stimulus_generation.rst
docs/source/_static/: custom.css
docs/source/explanations/: SMPR.md  deep_settings.md  development.md  usage.md
explanations/: SMPR.html  deep_settings.html  development.html  first_steps.html  motivations.html  usage.html
pynamicgain/: __init__.py  __main__.py  _types.py  analysis.py  base.py  config.py  generator.py  new_setup.py  observer.py  seed.py  stimulus_generation.py
pynamicgain/default_configs/: default_configs.toml
tests/: conftest.py  test_analysis.py  test_cli.py  test_config.py  test_generator.py  test_observer.py  test_seed.py  test_stimulus_generation.py  test_types.py
tests/data/: sample_setup.toml
