[build-system]
requires = ["setuptools >= 61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "PynamicGain"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = [
  "pandas",
  "matplotlib",
  "scipy",
  "numpy",
  "tomli",
  "numba",
  "pyyaml",
  "pyabf",
  "tomli-w",
  "tqdm",
  "docopt",
]

authors = [
  { name = "Friedrich Schwarz", email = "friedrich.schwarz@uni.goettingen.de" },
  { name = "Andreas Neef"},
  { name = "Stefan Pommer"},
]
maintainers = [
  { name="Friedrich Schwarz", email="friedrich.schwarz@uni.goettingen.de" },
]

readme = "README.md"
license = {file = "LICENSE.txt"}
description = "Dynamic Gain input generation for distributed PClamp setups."
keywords = [
    "neuroscience",
    "electrophysiology",
    "patch clamp",
    "scientific software",
    "data analysis",
    "dynamic gain",
]
classifiers = [
  "Programming Language :: Python :: 3 :: Only",
  "License :: OSI Approved :: GNU Affero General Public License v3",
  "Operating System :: OS Independent",
]


[project.scripts]
pydg_new_setup = "pynamicgain.new_setup:initiate_new_setup"
pydg_generate = "pynamicgain.__main__:generate"
pydg_generate_analyse = "pynamicgain.__main__:generate_analyse"
pydg_analyse = "pynamicgain.__main__:analyse"
pydg_help = "pynamicgain.__main__:help"


[project.urls]
Repository = "https://github.com/goecidbn/pynamicgain"
Documentation = "https://goecidbn.github.io/pynamicgain/"
Homepage  = "https://goecidbn.github.io/pynamicgain/"
"Bug Tracker" = "https://github.com/goecidbn/pynamicgain/issues"
Changelog = "https://github.com/goecidbn/pynamicgain/blob/main/CHANGELOG.md"


[project.optional-dependencies]
docs = [
  "myst-parser",
  "pydata-sphinx-theme",
  "pylint",
  "sphinx",
  "sphinx-autodoc-typehints",
  "sphinx-design",
]
interactive = [
  "jupyterlab",
  "ipykernel",
]
test = [
  "pytest >= 8.0",
  "pytest-cov",
  "pytest-mock",
]


[tool.setuptools]
packages = [
  "pynamicgain",
  "pynamicgain.default_configs",
]
include-package-data = true


[tool.pytest.ini_options]
testpaths = ["tests"]
markers = [
  "slow: marks tests involving Numba JIT compilation (deselect with '-m \"not slow\"')",
]
addopts = "--strict-markers"
filterwarnings = [
  "error",
  "ignore::DeprecationWarning:pynamicgain.base",
]


[tool.setuptools.package-data]
"pynamicgain.default_configs" = [
  "default_configs.toml",
  "matplotlib.mplstyle",
]
